--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"  />
     <title>Title</title>
 
     <link rel="stylesheet" href='http://127.0.0.1:8000/static/styles/global.css'>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.5"></script>
+
     <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet"/>
 
+      <script src="https://unpkg.com/htmx.org@latest"></script>
+  <script src="https://unpkg.com/htmx.org@latest/dist/ext/alpine-morph.js"></script>
+  <!-- Alpine Plugins -->
+  <script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script>
+  <!-- Alpine Core -->
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
+
+    </script>
 </head>
 <body>
 
@@ -26,13 +33,91 @@
     </div>
 
 </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
+
+<script>
+try{
+   // let parkplatz = await (await fetch('http://127.0.0.1:8000/api/game/')).json();
+
+}  catch (error) {
+  console.error(error);
+  // Expected output: ReferenceError: nonExistentFunction is not defined
+  // (Note: the exact output may be browser-dependent)
+}
+x = true
+async function color_change_parkplatz_public() {
+
+
+    let url = 'http://127.0.0.1:8000/api/parkplatz';
+    let response = await fetch(url);
+
+    let parkplatz = await response.json();
+    if (parkplatz.one.Besetzt == "true") {
+        htmx.removeClass(htmx.find("#one"), "parkplatz_frei", 1000);
+        htmx.addClass(htmx.find('#one'), 'parkplatz_besetzt', 1000);
+    }
+    else {
+        htmx.removeClass(htmx.find("#one"), "parkplatz_besetzt", 1000);
+        htmx.addClass(htmx.find('#one'), 'parkplatz_frei', 1000);
+    }
+      if (parkplatz.two.Besetzt == "true") {
+        htmx.removeClass(htmx.find("#two"), "parkplatz_frei", 1000);
+        htmx.addClass(htmx.find('#two'), 'parkplatz_besetzt', 1000);
+    }
+    else {
+        htmx.removeClass(htmx.find("#two"), "parkplatz_besetzt", 1000);
+        htmx.addClass(htmx.find('#two'), 'parkplatz_frei', 1000);
+    }
+
+      if (parkplatz.three.Besetzt == "true") {
+        htmx.removeClass(htmx.find("#three"), "parkplatz_frei", 1000);
+        htmx.addClass(htmx.find('#three'), 'parkplatz_besetzt', 1000);
+    }
+    else {
+        htmx.removeClass(htmx.find("#three"), "parkplatz_besetzt", 1000);
+        htmx.addClass(htmx.find('#three'), 'parkplatz_frei', 1000);
+    }
+
+      if (parkplatz.four.Besetzt == "true") {
+        htmx.removeClass(htmx.find("#four"), "parkplatz_frei", 1000);
+        htmx.addClass(htmx.find('#four'), 'parkplatz_besetzt', 1000);
+    }
+    else {
+        htmx.removeClass(htmx.find("#four"), "parkplatz_besetzt", 1000);
+        htmx.addClass(htmx.find('#four'), 'parkplatz_frei', 1000);
+    }
+
+      if (parkplatz.five.Besetzt == "true") {
+        htmx.removeClass(htmx.find("#five"), "parkplatz_frei", 1000);
+        htmx.addClass(htmx.find('#five'), 'parkplatz_besetzt', 1000);
+    }
+    else {
+        htmx.removeClass(htmx.find("#five"), "parkplatz_besetzt", 1000);
+        htmx.addClass(htmx.find('#five'), 'parkplatz_frei', 1000);
+    }
+    if (parkplatz.six.Besetzt == "true") {
+        htmx.removeClass(htmx.find("#six"), "parkplatz_frei", 1000);
+        htmx.addClass(htmx.find('#six'), 'parkplatz_besetzt', 1000);
+    }
+    else {
+        htmx.removeClass(htmx.find("#six"), "parkplatz_besetzt", 1000);
+        htmx.addClass(htmx.find('#six'), 'parkplatz_frei', 1000);
+    }
+
+
+
+
+    setTimeout(color_change, 8000)
+
+}
+color_change_parkplatz_public()
+</script>
+
 
 </body>
-<script type="text/hyperscript">
-
-    fetch 127.0.0.1:8000/api/parkplatz put the result into #one
 
 
-</script>
+
+
+
+
 </html>
