--- a/templates/dashboard/home.jinja2
+++ b/templates/dashboard/home.jinja2
@@ -423,7 +423,7 @@ async function get_user() {
     })
     //let response = htmx.ajax('GET', url, context: { headers:{"Content-Type": "application/json"});
     let user = await response.json();
-    alert(user[0].Email)
+    //alert(user[0].Email)
 return user
 }
 get_user()
