--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -16,16 +16,28 @@ body {
 
 .main-block{
     margin-top: 10%;
-    margin-bottom: 50px;
+/ / margin-bottom: 50 px;
     display: flex;
-    margin-left: 70px;
+/ / margin-left: 70 px;
+    flex-direction: row;
+    flex: 2;
+    justify-content: center;
+    column-count: 2;
+
+}
+
+.hgame {
+
+
 }
     #container {
         display: grid;
         grid: repeat(2, 90px) / auto-flow 60px;
-        justify-content: center;
     }
 
+h2 {
+    left: 20px;
+}
     #container > .parkplatz_frei {
         width: 60px;
         height: 70px;
@@ -158,7 +170,14 @@ width: 100%;
     }
 
 
+.park_public {
 
+}
+
+.park_privat {
+    position: relative;
+    margin-top: 20px;
+}
 
     .section_nav {
         box-sizing: border-box;
