--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"  />
     <title>Title</title>
 
-    <link rel="stylesheet" href='http://10.0.0.58:8000/static/styles/global.css'>
+    <link rel="stylesheet" href='/static/styles/global.css'>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
